--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ span {
   font-family: Arial;
   font-weight: lighter;
   font-style: italic;
-  text-decoration: line-through;
+  text-decoration: line-through fuchsia;
   color: blue;
   cursor: pointer;
   white-space: nowrap;
@@ -12,4 +12,25 @@ span {
 
 h1 {
   color: green
+}
+body{
+  background-color: whitesmoke;
+}
+.block-container {
+  height: 100px;
+  width: 200px;
+  background-color: lightblue;
+}
+.container {
+text-decoration: underline firebrick;
+}
+.inline-container {
+  height: 100px;
+  width: 200px;
+  background-color: lightgreen;
+}
+
+.phrase-1 {
+  color: red;
+  text-align: center;
 }
